--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ gspread
 xlsxwriter
 music_tag
 oauth2client
-
+Flask==2.1.2
+PyQt6
 
 # This is a comment, to show how #-prefixed lines are ignored.
 # It is possible to specify requirements as plain names.
